--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <div>
             <form action="">
-                CPF: <input type="text" name="cpf" value=""><br>
+                CPF: <input type="text" name="cpf" id="cpfValidation"><br>
 
                 <input type="submit" value="Submit">
             </form>
